# janus-secrets

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.release  Makefile  NOTICE  README.md  docker-compose.yml  fe-improvements.md  gaps.md  go.mod  go.sum  status.md  ui-redo.md
docs/: README.md  architecture.md  ci-federation.md  cli.md  crypto.md  data-model.md  oidc.md  openapi.yaml  operations.md  references.md  roadmap.md  transit.md  web.md
migrations/: 000001_init.down.sql  000001_init.up.sql  000002_auth.down.sql  000002_auth.up.sql  000003_rbac.down.sql  000003_rbac.up.sql  000004_audit.up.sql  000005_cascade_destroy.down.sql  000005_cascade_destroy.up.sql  000006_transit.down.sql  000006_transit.up.sql  000007_oidc.down.sql  000007_oidc.up.sql  000008_metrics_index.down.sql  000008_metrics_index.up.sql  000009_oidc_federation.down.sql  000009_oidc_federation.up.sql  000010_rotation.down.sql  000010_rotation.up.sql  000011_sync.down.sql  000011_sync.up.sql  000012_dynamic.down.sql  000012_dynamic.up.sql  000013_rotation_runs.down.sql  000013_rotation_runs.up.sql  000014_sync_runs.down.sql  000014_sync_runs.up.sql  000015_project_kek_versions.down.sql  000015_project_kek_versions.up.sql  000016_promotion.down.sql  000016_promotion.up.sql  000017_promotion_idempotency.down.sql  000017_promotion_idempotency.up.sql  000018_promotion_provenance.down.sql  000018_promotion_provenance.up.sql  000019_master_key_rotation.down.sql  000019_master_key_rotation.up.sql  000020_api_hardening.down.sql  (+36 more)
sdk/python/: .gitignore  README.md  pyproject.toml
sdk/python/janus_client/: __init__.py  _transport.py  client.py  errors.py  lease.py
sdk/python/tests/: fake_transport.py  test_client.py  test_lease.py  test_transport_integration.py
(+1079 files in other folders)
